Resolve spontaneous icon shift.

--- a/src/scss/semantic/_dropdown.scss
+++ b/src/scss/semantic/_dropdown.scss
@@ -49,7 +49,13 @@ body .ui.labeled.icon.buttons>.button>.icon {
   background-color: rgba(0,0,0,.05);
   -webkit-box-shadow: -1px 0 0 0 transparent inset;
   box-shadow: -1px 0 0 0 transparent inset;
-  line-height: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &::before {
+    margin-top: -3px;
+  }
 }
 
 body .utk-research-tools {
